feat: add admin dashboard for content and account management
- Add UserRole (USER/ADMIN) and VideoStatus (PUBLISHED/PENDING/FLAGGED) enums
- Add role column to users table, status column to video_sources (Liquibase migrations)
- Include role claim in JWT; build GrantedAuthority in filter so hasRole() works
- Gate /v1/funny-app/admin/** with hasRole('ADMIN') + @PreAuthorize on controller
- Add AdminController with 7 endpoints: list/status/delete videos, list/role/delete accounts, stats
- Frontend: expose isAdmin from /user/me, add Admin nav item with guard, AdminView + tables + CSS

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>